; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_add_param.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_entry_add_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist_entry = type { i32, i32 }
%struct.playlist_param = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @playlist_entry_add_param(%struct.playlist_entry* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.playlist_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.playlist_param, align 4
  store %struct.playlist_entry* %0, %struct.playlist_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %7, i32 0, i32 0
  %9 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @bstrdup(%struct.playlist_entry* %9, i32 %10)
  store i32 %11, i32* %8, align 4
  %12 = getelementptr inbounds %struct.playlist_param, %struct.playlist_param* %7, i32 0, i32 1
  %13 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @bstrdup(%struct.playlist_entry* %13, i32 %14)
  store i32 %15, i32* %12, align 4
  %16 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %17 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %18 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %21 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = bitcast %struct.playlist_param* %7 to i64*
  %24 = load i64, i64* %23, align 4
  %25 = call i32 @MP_TARRAY_APPEND(%struct.playlist_entry* %16, i32 %19, i32 %22, i64 %24)
  ret void
}

declare dso_local i32 @bstrdup(%struct.playlist_entry*, i32) #1

declare dso_local i32 @MP_TARRAY_APPEND(%struct.playlist_entry*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
